--- a/posts/2024-12-04-2024-nfl-season-in-10-graphs/index.qmd
+++ b/posts/2024-12-04-2024-nfl-season-in-10-graphs/index.qmd
@@ -693,11 +693,10 @@ ball_carrier_epa <- pbp_2024_reg %>%
   filter(!is.na(ball_carrier),
          play_type != 'no_play') %>% 
   left_join(x=.,
-            y=rosters %>% select(position, gsis_id),
+            y=rosters %>% distinct(position, gsis_id),
             by=c('ball_carrier_id' = 'gsis_id')) %>%
-  filter(ball_carrier == 'J.Conner') %>% 
-  group_by(posteam, ball_carrier, ball_carrier_id) %>% 
-  # group_by(posteam, ball_carrier, ball_carrier_id, position) %>% 
+  # group_by(posteam, ball_carrier, ball_carrier_id) %>% 
+  group_by(posteam, ball_carrier, ball_carrier_id, position) %>%
   # something wrong with my touches calc -- it's way too many
   reframe(touch = row_number(),
          ttl_touch = max(touch),
@@ -705,7 +704,7 @@ ball_carrier_epa <- pbp_2024_reg %>%
   arrange(-touch)
 ```
 
-This is a sstory about positional value, with only a small number of running backs generating much in the way of EPA. (Should also look at it on a per-play basis).
+This is a story about positional value, with only a small number of running backs generating much in the way of EPA. (Should also look at it on a per-play basis).
 
 ```{r}
 ball_carrier_epa %>% 
